[gd_scene load_steps=16 format=3 uid="uid://bqipc1m3vccb3"]

[ext_resource type="Script" path="res://Levels/game_scene.gd" id="1_r3gdk"]
[ext_resource type="PackedScene" uid="uid://gx6pe31mxq3a" path="res://Prefabs/player/player.tscn" id="1_rch4r"]
[ext_resource type="PackedScene" uid="uid://bcjgp8xowkghu" path="res://Prefabs/bunker/bunker.tscn" id="2_mkfif"]
[ext_resource type="Script" path="res://Levels/spawners.gd" id="2_qhm6a"]
[ext_resource type="PackedScene" uid="uid://b02kqjnyyd170" path="res://Prefabs/zombie/zombie.tscn" id="3_15737"]
[ext_resource type="Script" path="res://Prefabs/despawners.gd" id="4_skm5k"]
[ext_resource type="AudioStream" uid="uid://b0ai87bit12r" path="res://Assets/Audio/distant-warfare-51848.mp3" id="7_qnnl1"]
[ext_resource type="Texture2D" uid="uid://ddo2bkd81q8n1" path="res://Assets/Sprites/map 1wip.png" id="8_iisqg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_346xx"]
size = Vector2(38.5, 595)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n7bpg"]
size = Vector2(37, 773)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3nn2x"]
size = Vector2(39, 906.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1harr"]
size = Vector2(43.25, 765)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_07c61"]
size = Vector2(42, 647)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pgpxt"]
size = Vector2(1358, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_60m2b"]
size = Vector2(1354, 35)

[node name="GameScene" type="Node2D"]
script = ExtResource("1_r3gdk")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(578, 326)
zoom = Vector2(0.985, 0.985)

[node name="RoundLabel" type="Label" parent="Camera2D"]
offset_left = -550.0
offset_top = -275.0
offset_right = -482.0
offset_bottom = -250.0
text = "Round: 1"

[node name="ScoreLabel" type="Label" parent="Camera2D"]
offset_left = -550.0
offset_top = -300.0
offset_right = -456.0
offset_bottom = -275.0
text = "Dosh: 1000â‚¬"

[node name="MidTitleLabel" type="Label" parent="Camera2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -316.5
offset_top = -41.5
offset_right = 316.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Next round INBOUND"

[node name="Player" parent="." instance=ExtResource("1_rch4r")]
position = Vector2(467, 293)

[node name="Bunker" parent="." instance=ExtResource("2_mkfif")]
position = Vector2(541, 365)

[node name="Spawners" type="Node2D" parent="."]
script = ExtResource("2_qhm6a")
zombie_scene = ExtResource("3_15737")

[node name="LeftSpawner" type="Area2D" parent="Spawners"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawners/LeftSpawner"]
position = Vector2(-39, 329)
shape = SubResource("RectangleShape2D_346xx")

[node name="RightSpawner" type="Area2D" parent="Spawners"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawners/RightSpawner"]
position = Vector2(1266, 266.5)
shape = SubResource("RectangleShape2D_n7bpg")

[node name="TopSpawner" type="Area2D" parent="Spawners"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawners/TopSpawner"]
position = Vector2(550, -47)
rotation = 1.5708
shape = SubResource("RectangleShape2D_3nn2x")

[node name="Despawners" type="Node2D" parent="."]
script = ExtResource("4_skm5k")

[node name="RightDespawner" type="Area2D" parent="Despawners"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Despawners/RightDespawner"]
position = Vector2(-95, 309.5)
shape = SubResource("RectangleShape2D_1harr")

[node name="LeftDespawner" type="Area2D" parent="Despawners"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Despawners/LeftDespawner"]
position = Vector2(1195, 312)
shape = SubResource("RectangleShape2D_07c61")

[node name="TopDespawner" type="Area2D" parent="Despawners"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Despawners/TopDespawner"]
position = Vector2(561, -101)
shape = SubResource("RectangleShape2D_pgpxt")

[node name="BottomDespawner" type="Area2D" parent="Despawners"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Despawners/BottomDespawner"]
position = Vector2(611, 677.5)
shape = SubResource("RectangleShape2D_60m2b")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_qnnl1")
volume_db = 0.937
autoplay = true

[node name="Sprite2D" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(578, 308)
texture = ExtResource("8_iisqg")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Prefabs/player/player.tscn")
spawn_path = NodePath("..")

[connection signal="area_entered" from="Despawners/RightDespawner" to="Despawners" method="_on_despawner_entered"]
[connection signal="area_entered" from="Despawners/LeftDespawner" to="Despawners" method="_on_despawner_entered"]
[connection signal="area_entered" from="Despawners/TopDespawner" to="Despawners" method="_on_despawner_entered"]
[connection signal="area_entered" from="Despawners/BottomDespawner" to="Despawners" method="_on_despawner_entered"]
